# FasterLLaMA

./: CMakeLists.txt  README.md
cuda/: allocator.h  common.h  cuda_kernels.cu  cuda_kernels.cuh  decoder_kernels.cu  decoder_kernels.cuh  decoding_kernels.cu  decoding_kernels.cuh  decoding_sampling.h  error.cuh  llama_fp32.cu  open_decoder.cuh  test  test.cu  test1022  testresnorm  utils.h
docs/: 【CUDA编程】手撸大模型推理框架FasterLlama.md
fasterLlama/: CMakeLists.txt  decoding_sampling.h  open_decoder.h
fasterLlama/cuda/: CMakeLists.txt  allocator.h  common.h  cuda_kernels.cuh  decoder_kernels.cu  decoder_kernels.cuh  decoding_kernels.cu  decoding_kernels.cuh  decoding_sampling.cu  open_decoder.cu  utils.h
samples/: CMakeLists.txt  llama_fp16.cu  llama_fp32.cu  test.cu
